--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     100% {
       opacity: 1;
     }
-  }
+}
   .b-sch-event:not(.b-milestone) {
     border-radius: 2em;
   }
@@ -29,20 +29,20 @@
     --handle-align-inset: 30%;
     --handle-inset: 5px;
   }
-  
+
   .b-resource-info .b-resource-avatar {
     border-radius: 7px;
     height: 3em;
     width: auto;
     margin-inline-end: 1em;
   }
-  
+
   .b-sch-timeaxis-cell {
     pointer-events: none;
     background-color: #f3f4f5;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
   }
-  
+
   .b-sch-resourcetimerange {
     background: #fff;
     align-items: center;
@@ -55,7 +55,7 @@
   .b-sch-resourcetimerange > div {
     justify-content: center;
   }
-  
+
   .b-schedulerpro:not(.b-dragging-event):not(.b-resizing-event):not(.b-eventeditor-editing) .b-sch-resourcetimerange.b-selected, .b-schedulerpro:not(.b-dragging-event):not(.b-resizing-event):not(.b-eventeditor-editing):not(.b-reserving-dates) .b-sch-resourcetimerange:hover {
     color: #555;
     font-weight: bold;
@@ -78,7 +78,7 @@
   .b-schedulerpro:not(.b-dragging-event):not(.b-resizing-event):not(.b-eventeditor-editing).b-invalid-reservation .b-sch-resourcetimerange.b-selected {
     border-color: #ff0000;
   }
-  
+
   .b-horizontaltimeaxis .b-sch-header-timeaxis-cell {
     border: 0;
   }
@@ -88,37 +88,37 @@
   .b-lowest .b-horizontaltimeaxis .b-sch-header-timeaxis-cell.b-sch-dayheadercell-6, .b-lowest .b-horizontaltimeaxis .b-sch-header-timeaxis-cell.b-sch-dayheadercell-0 {
     color: #777;
   }
-  
+
   .b-sch-header-timeaxis-cell {
     font-weight: bold;
     color: #999;
   }
-  
+
   .b-lowest .b-sch-header-timeaxis-cell {
     font-weight: bold;
   }
   .b-lowest .b-sch-header-timeaxis-cell.b-sch-dayheadercell-6, .b-lowest .b-sch-header-timeaxis-cell.b-sch-dayheadercell-0 {
     color: #444;
   }
-  
+
   .b-grid-header .shaded,
   .b-timeline-subgrid .shaded {
     z-index: 50 !important;
     pointer-events: auto;
     cursor: default;
   }
-  
+
   .b-timeline-subgrid .shaded {
     border-inline-end: 2px solid red;
     background-color: rgba(250, 250, 250, 0.55);
   }
-  
+
   .b-grid-header .shaded {
     height: 100% !important;
     top: 0;
     background: rgba(243, 244, 245, 0.7);
   }
-  
+
   .b-theme-classic-dark .b-timeline-subgrid .shaded,
   .b-theme-classic-dark .b-grid-header .shaded {
     background-color: rgba(68, 68, 74, 0.7019607843);
@@ -140,7 +140,7 @@
   .b-theme-classic-dark .b-reserving-dates .b-sch-resourcetimerange:not(.b-selected) {
     background: #3f3f44;
   }
-  
+
   .b-sch-event-tooltip.b-floating, .b-sch-event-tooltip.b-floating .b-panel-body-wrap {
     border-radius: 6px;
   }
@@ -150,11 +150,11 @@
   .b-sch-event-tooltip.b-floating h4:not(:first-child) {
     margin-top: 1em;
   }
-  
+
   .b-reserving-dates .b-sch-resourcetimerange:not(.b-selected) {
     background: #f3f4f5;
   }
-  
+
   .b-dayselector-tip.b-floating,
   .b-dayselector-tip.b-floating .b-panel-body-wrap {
     border-radius: 10px;
@@ -170,8 +170,8 @@
     width: 0;
     height: 0;
     border-style: solid;
-    left: 0; 
-    bottom: 0; 
+    left: 0;
+    bottom: 0;
     border-width: 16px 0 0 16px;
     border-color: transparent transparent transparent #ddb33a99;
    }
@@ -186,7 +186,7 @@
      width: 0;
      height: 0;
      border-style: solid;
-   } 
+   }
   .unitClass-Cell{
     background: #f9d9d0;
     border: 1px solid #c57a64;
@@ -263,44 +263,52 @@
     position: absolute;
     top: -5px;
     opacity: 0.9;
-  } 
+  }
   .test2 {
     position: absolute;
     top: 5px;
-  } 
+  }
   .test3 {
     position: absolute;
     top: 0px;
     opacity: 0.8;
-  } 
+  }
 
-  .b-sch-resourcetimerange {
-  
-    /* background: #fff !important; */
-  
-    align-items: center !important;
-  
-    /* color: #aaa !important; */
-  
-    cursor: pointer !important;
-  
-    /* border-inline-end: 1px solid #f3f4f5 !important; */
-  
-    transition: background-color 0.4s !important;
-  
-    outline: none !important;
-  
-    white-space: pre-line !important;
-  
-  }
-  
-  
+  /*.b-sch-resourcetimerange {*/
+
+  /*  !* background: #fff !important; *!*/
+
+  /*  align-items: center !important;*/
+
+  /*  !* color: #aaa !important; *!*/
+
+  /*  cursor: pointer !important;*/
+
+  /*  !* border-inline-end: 1px solid #f3f4f5 !important; *!*/
+
+  /*  transition: background-color 0.4s !important;*/
+
+  /*  outline: none !important;*/
+
+  /*  white-space: pre-line !important;*/
+
+  /*}*/
+
+
   .b-sch-resourcetimerange > div {
-  
+
     justify-content: center !important;
-  
+
     text-align: center !important;
-  
+
     align-items: center !important;
-  
+
   }
+
+.b-sch-resourcetimerange .reservation-amount {
+  background-color: lightblue;
+  color: #000;
+}
+.b-sch-resourcetimerange .reservation-minNight {
+  color: lightcoral;
+}
